Начата разработка приложения Добавлены функции работы с устройствами

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -5,3 +5,31 @@
 /modbusemu.o
 /modbusemu.or
 /modbusemu.res
+/DeviceAdd.lfm
+/DeviceAdd.o
+/DeviceAdd.ppu
+/DeviceView.lfm
+/DeviceView.o
+/DeviceView.ppu
+/MBAddressActions.o
+/MBAddressActions.ppu
+/MBBitsClasses.o
+/MBBitsClasses.ppu
+/MBBitsClasses.rsj
+/MBByteClasses.o
+/MBByteClasses.ppu
+/MBDefine.o
+/MBDefine.ppu
+/MBDeviceClasses.o
+/MBDeviceClasses.ppu
+/MBErrorCode.o
+/MBErrorCode.ppu
+/MBErrorCode.rsj
+/MBRegistersCalsses.o
+/MBRegistersCalsses.ppu
+/MBRegListSimpleClasses.o
+/MBRegListSimpleClasses.ppu
+/MBRegListSimpleClasses.rsj
+/MBResourceString.o
+/MBResourceString.ppu
+/MBResourceString.rsj
