--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -33,3 +33,7 @@
 /MBResourceString.o
 /MBResourceString.ppu
 /MBResourceString.rsj
+/LoggerItf.o
+/LoggerItf.ppu
+/LoggerLazarusGtkApplication.o
+/LoggerLazarusGtkApplication.ppu
