Добалены заготовки для: * фрейма последовательного канала * фрейма сетевого канала * классов каналов

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -37,3 +37,15 @@
 /LoggerItf.ppu
 /LoggerLazarusGtkApplication.o
 /LoggerLazarusGtkApplication.ppu
+/formChennelRSAdd.lfm
+/formChennelRSAdd.o
+/formChennelRSAdd.ppu
+/formChennelTCPAdd.lfm
+/formChennelTCPAdd.o
+/formChennelTCPAdd.ppu
+/framChennelRSClasses.lfm
+/framChennelRSClasses.o
+/framChennelRSClasses.ppu
+/framChennelTCPClasses.lfm
+/framChennelTCPClasses.o
+/framChennelTCPClasses.ppu
