--- a/source/.gitignore
+++ b/source/.gitignore
@@ -4,3 +4,14 @@
 /DeviceView.~pas
 /main.~lfm
 /main.~pas
+/ChennelClasses.~pas
+/ChennelRSClasses.~pas
+/ChennelTCPClasses.~pas
+/formChennelRSAdd.~lfm
+/formChennelRSAdd.~pas
+/formChennelTCPAdd.~lfm
+/formChennelTCPAdd.~pas
+/framChennelRSClasses.~lfm
+/framChennelRSClasses.~pas
+/framChennelTCPClasses.~lfm
+/framChennelTCPClasses.~pas
