Основные работы по функционированию интерфейса закончены. Осталось напонение данными и работа с каналами

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -49,3 +49,15 @@
 /framChennelTCPClasses.lfm
 /framChennelTCPClasses.o
 /framChennelTCPClasses.ppu
+/ChennelClasses.o
+/ChennelClasses.ppu
+/ChennelRSClasses.o
+/ChennelRSClasses.ppu
+/ChennelTCPClasses.o
+/ChennelTCPClasses.ppu
+/formChennelAdd.lfm
+/formChennelAdd.o
+/formChennelAdd.ppu
+/formChennelRSLinuxAdd.lfm
+/formChennelRSLinuxAdd.o
+/formChennelRSLinuxAdd.ppu
