--- a/source/.gitignore
+++ b/source/.gitignore
@@ -15,3 +15,6 @@
 /framChennelRSClasses.~pas
 /framChennelTCPClasses.~lfm
 /framChennelTCPClasses.~pas
+/formChennelRSLinuxAdd.~pas
+/formChennelRSWindowsAdd.~pas
+/formChennelAdd.~pas
