Строки сообщений главной формы перенесены в ресурсы

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -61,3 +61,6 @@
 /formChennelRSLinuxAdd.lfm
 /formChennelRSLinuxAdd.o
 /formChennelRSLinuxAdd.ppu
+/ModbusEmuResStr.o
+/ModbusEmuResStr.ppu
+/ModbusEmuResStr.rsj
