Продолжена разработка канала TCP

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -64,3 +64,33 @@
 /ModbusEmuResStr.o
 /ModbusEmuResStr.ppu
 /ModbusEmuResStr.rsj
+/MBBuilderBase.o
+/MBBuilderBase.ppu
+/MBBuilderPacketClasses.o
+/MBBuilderPacketClasses.ppu
+/MBBuilderTCPAnswerPacketClasses.o
+/MBBuilderTCPAnswerPacketClasses.ppu
+/MBInterfaces.o
+/MBInterfaces.ppu
+/MBRequestReaderBaseClasses.o
+/MBRequestReaderBaseClasses.ppu
+/MBRequestReaderTCPClasses.o
+/MBRequestReaderTCPClasses.ppu
+/MBRequestTypes.o
+/MBRequestTypes.ppu
+/MBResponseTypes.o
+/MBResponseTypes.ppu
+/SocketErrorCode.o
+/SocketErrorCode.ppu
+/SocketErrorRString.o
+/SocketErrorRString.ppu
+/SocketErrorRString.rsj
+/SocketMisc.o
+/SocketMisc.ppu
+/SocketMyServerTypes.o
+/SocketMyServerTypes.ppu
+/SocketResStrings.o
+/SocketResStrings.ppu
+/SocketResStrings.rsj
+/SocketSimpleTypes.o
+/SocketSimpleTypes.ppu
