--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -105,3 +105,5 @@
 /CRC16Func.ppu
 /MBRequestReaderRTUClasses.o
 /MBRequestReaderRTUClasses.ppu
+/MBBuilderRTUAnswerPacketClasses.o
+/MBBuilderRTUAnswerPacketClasses.ppu
