Добавлены модуль типов исключений и ресурсных строк к нему

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -107,3 +107,8 @@
 /MBRequestReaderRTUClasses.ppu
 /MBBuilderRTUAnswerPacketClasses.o
 /MBBuilderRTUAnswerPacketClasses.ppu
+/ExceptionsResStrings.o
+/ExceptionsResStrings.ppu
+/ExceptionsResStrings.rsj
+/ExceptionsTypes.o
+/ExceptionsTypes.ppu
