Продолжение работы над просмотром устройства

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -112,3 +112,6 @@
 /ExceptionsResStrings.rsj
 /ExceptionsTypes.o
 /ExceptionsTypes.ppu
+/TestDeviceView.lfm
+/TestDeviceView.o
+/TestDeviceView.ppu
