Начата разработка сохранения/загрузки конфигурации

--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -118,3 +118,24 @@
 /formRahgeEdit.lfm
 /formRahgeEdit.o
 /formRahgeEdit.ppu
+/dkCodecUtilsWin32.o
+/dkCodecUtilsWin32.ppu
+/dkCodecUtilsWin32.rsj
+/dkEncodingUtils.o
+/dkEncodingUtils.ppu
+/dkEncodingUtils.rsj
+/MBEmuLoaderClasses.o
+/MBEmuLoaderClasses.ppu
+/MBEmuXMLConst.o
+/MBEmuXMLConst.ppu
+/NativeXml.o
+/NativeXml.ppu
+/NativeXml.rsj
+/NativeXmlWin32Compat.o
+/NativeXmlWin32Compat.ppu
+/sdDebug.o
+/sdDebug.ppu
+/sdStreams.o
+/sdStreams.ppu
+/sdStringTable.o
+/sdStringTable.ppu
