--- a/dcu/i386-linux/.gitignore
+++ b/dcu/i386-linux/.gitignore
@@ -128,3 +128,6 @@
 /SocketResStrings.rsj
 /SocketSimpleTypes.o
 /SocketSimpleTypes.ppu
+/formChennelRSWindowsAdd.lfm
+/formChennelRSWindowsAdd.o
+/formChennelRSWindowsAdd.ppu
