--- a/dcu/i386-win32/.gitignore
+++ b/dcu/i386-win32/.gitignore
@@ -120,3 +120,6 @@
 /SocketResStrings.rsj
 /SocketSimpleTypes.o
 /SocketSimpleTypes.ppu
+/formChennelRSLinuxAdd.lfm
+/formChennelRSLinuxAdd.o
+/formChennelRSLinuxAdd.ppu
