--- a/dcu/x86_64-linux/.gitignore
+++ b/dcu/x86_64-linux/.gitignore
@@ -139,3 +139,6 @@
 /sdStreams.ppu
 /sdStringTable.o
 /sdStringTable.ppu
+/formChennelRSWindowsAdd.lfm
+/formChennelRSWindowsAdd.o
+/formChennelRSWindowsAdd.ppu
