--- a/dcu/x86_64-win64/.gitignore
+++ b/dcu/x86_64-win64/.gitignore
@@ -120,3 +120,6 @@
 /SocketResStrings.rsj
 /SocketSimpleTypes.o
 /SocketSimpleTypes.ppu
+/formChennelRSLinuxAdd.lfm
+/formChennelRSLinuxAdd.o
+/formChennelRSLinuxAdd.ppu
