--- a/modbusemu.lpi
+++ b/modbusemu.lpi
@@ -21,7 +21,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MinorVersionNr Value="5"/>
-      <BuildNr Value="118"/>
+      <BuildNr Value="178"/>
       <Language Value="0419"/>
       <Attributes pvaDebug="True"/>
       <StringTable ProductVersion=""/>
@@ -208,7 +208,7 @@
       <Unit8>
         <Filename Value="source/formChennelRSWindowsAdd.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="TfrmChennelRSAdd"/>
+        <ComponentName Value="frmChennelRSAddWin"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit8>
