--- a/modbusemu.lpi
+++ b/modbusemu.lpi
@@ -20,10 +20,10 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <MinorVersionNr Value="5"/>
-      <BuildNr Value="178"/>
+      <MinorVersionNr Value="6"/>
+      <BuildNr Value="2"/>
       <Language Value="0419"/>
-      <Attributes pvaDebug="True"/>
+      <Attributes pvaPreRelease="True"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="4">
