--- a/dcu/i386-linux/.gitignore
+++ b/dcu/i386-linux/.gitignore
@@ -1,120 +1,93 @@
-/ChennelClasses.o
-/ChennelClasses.ppu
-/ChennelRSClasses.o
-/ChennelRSClasses.ppu
-/ChennelTCPClasses.o
-/ChennelTCPClasses.ppu
-/COMCrossTypes.o
-/COMCrossTypes.ppu
-/COMPortParamTypes.o
-/COMPortParamTypes.ppu
-/COMPortResStr.o
-/COMPortResStr.ppu
-/COMPortResStr.rsj
-/CRC16Func.o
-/CRC16Func.ppu
+*.ppu
+*.lfm
+*.o
+*.compiled
+*.or
+*.res
+*.rsj
+/main.lfm
+/main.o
+/main.ppu
+/modbusemu.compiled
+/modbusemu.o
+/modbusemu.or
+/modbusemu.res
 /DeviceAdd.lfm
 /DeviceAdd.o
 /DeviceAdd.ppu
 /DeviceView.lfm
 /DeviceView.o
 /DeviceView.ppu
-/dkCodecUtilsWin32.o
-/dkCodecUtilsWin32.ppu
-/dkCodecUtilsWin32.rsj
-/dkEncodingUtils.o
-/dkEncodingUtils.ppu
-/dkEncodingUtils.rsj
-/ExceptionsResStrings.o
-/ExceptionsResStrings.ppu
-/ExceptionsResStrings.rsj
-/ExceptionsTypes.o
-/ExceptionsTypes.ppu
-/formChennelAdd.lfm
-/formChennelAdd.o
-/formChennelAdd.ppu
-/formChennelRSLinuxAdd.lfm
-/formChennelRSLinuxAdd.o
-/formChennelRSLinuxAdd.ppu
-/formChennelTCPAdd.lfm
-/formChennelTCPAdd.o
-/formChennelTCPAdd.ppu
-/formRahgeEdit.lfm
-/formRahgeEdit.o
-/formRahgeEdit.ppu
-/framChennelRSClasses.lfm
-/framChennelRSClasses.o
-/framChennelRSClasses.ppu
-/framChennelTCPClasses.lfm
-/framChennelTCPClasses.o
-/framChennelTCPClasses.ppu
-/LoggerItf.o
-/LoggerItf.ppu
-/LoggerLazarusGtkApplication.o
-/LoggerLazarusGtkApplication.ppu
-/main.lfm
-/main.o
-/main.ppu
 /MBAddressActions.o
 /MBAddressActions.ppu
 /MBBitsClasses.o
 /MBBitsClasses.ppu
 /MBBitsClasses.rsj
-/MBBuilderBase.o
-/MBBuilderBase.ppu
-/MBBuilderPacketClasses.o
-/MBBuilderPacketClasses.ppu
-/MBBuilderRTUAnswerPacketClasses.o
-/MBBuilderRTUAnswerPacketClasses.ppu
-/MBBuilderTCPAnswerPacketClasses.o
-/MBBuilderTCPAnswerPacketClasses.ppu
 /MBByteClasses.o
 /MBByteClasses.ppu
 /MBDefine.o
 /MBDefine.ppu
 /MBDeviceClasses.o
 /MBDeviceClasses.ppu
-/MBEmuLoaderClasses.o
-/MBEmuLoaderClasses.ppu
-/MBEmuXMLConst.ppu
-/MBInterfaces.o
-/MBInterfaces.ppu
+/MBErrorCode.o
+/MBErrorCode.ppu
+/MBErrorCode.rsj
 /MBRegistersCalsses.o
 /MBRegistersCalsses.ppu
 /MBRegListSimpleClasses.o
 /MBRegListSimpleClasses.ppu
 /MBRegListSimpleClasses.rsj
+/MBResourceString.o
+/MBResourceString.ppu
+/MBResourceString.rsj
+/LoggerItf.o
+/LoggerItf.ppu
+/LoggerLazarusGtkApplication.o
+/LoggerLazarusGtkApplication.ppu
+/formChennelRSAdd.lfm
+/formChennelRSAdd.o
+/formChennelRSAdd.ppu
+/formChennelTCPAdd.lfm
+/formChennelTCPAdd.o
+/formChennelTCPAdd.ppu
+/framChennelRSClasses.lfm
+/framChennelRSClasses.o
+/framChennelRSClasses.ppu
+/framChennelTCPClasses.lfm
+/framChennelTCPClasses.o
+/framChennelTCPClasses.ppu
+/ChennelClasses.o
+/ChennelClasses.ppu
+/ChennelRSClasses.o
+/ChennelRSClasses.ppu
+/ChennelTCPClasses.o
+/ChennelTCPClasses.ppu
+/formChennelAdd.lfm
+/formChennelAdd.o
+/formChennelAdd.ppu
+/formChennelRSLinuxAdd.lfm
+/formChennelRSLinuxAdd.o
+/formChennelRSLinuxAdd.ppu
+/ModbusEmuResStr.o
+/ModbusEmuResStr.ppu
+/ModbusEmuResStr.rsj
+/MBBuilderBase.o
+/MBBuilderBase.ppu
+/MBBuilderPacketClasses.o
+/MBBuilderPacketClasses.ppu
+/MBBuilderTCPAnswerPacketClasses.o
+/MBBuilderTCPAnswerPacketClasses.ppu
+/MBInterfaces.o
+/MBInterfaces.ppu
 /MBRequestReaderBaseClasses.o
 /MBRequestReaderBaseClasses.ppu
-/MBRequestReaderRTUClasses.o
-/MBRequestReaderRTUClasses.ppu
 /MBRequestReaderTCPClasses.o
 /MBRequestReaderTCPClasses.ppu
 /MBRequestTypes.o
 /MBRequestTypes.ppu
-/MBResourceString.o
-/MBResourceString.ppu
-/MBResourceString.rsj
 /MBResponseTypes.o
 /MBResponseTypes.ppu
-/modbusemu.compiled
-/modbusemu.o
-/modbusemu.or
-/modbusemu.res
-/ModbusEmuResStr.o
-/ModbusEmuResStr.ppu
-/ModbusEmuResStr.rsj
-/NativeXml.o
-/NativeXml.ppu
-/NativeXml.rsj
-/NativeXmlWin32Compat.o
-/NativeXmlWin32Compat.ppu
-/sdDebug.o
-/sdDebug.ppu
-/sdStreams.o
-/sdStreams.ppu
-/sdStringTable.o
-/sdStringTable.ppu
+/SocketErrorCode.o
 /SocketErrorCode.ppu
 /SocketErrorRString.o
 /SocketErrorRString.ppu
@@ -128,6 +101,51 @@
 /SocketResStrings.rsj
 /SocketSimpleTypes.o
 /SocketSimpleTypes.ppu
+/COMCrossTypes.o
+/COMCrossTypes.ppu
+/COMPortParamTypes.o
+/COMPortParamTypes.ppu
+/COMPortResStr.o
+/COMPortResStr.ppu
+/COMPortResStr.rsj
+/CRC16Func.o
+/CRC16Func.ppu
+/MBRequestReaderRTUClasses.o
+/MBRequestReaderRTUClasses.ppu
+/MBBuilderRTUAnswerPacketClasses.o
+/MBBuilderRTUAnswerPacketClasses.ppu
+/ExceptionsResStrings.o
+/ExceptionsResStrings.ppu
+/ExceptionsResStrings.rsj
+/ExceptionsTypes.o
+/ExceptionsTypes.ppu
+/TestDeviceView.lfm
+/TestDeviceView.o
+/TestDeviceView.ppu
+/formRahgeEdit.lfm
+/formRahgeEdit.o
+/formRahgeEdit.ppu
+/dkCodecUtilsWin32.o
+/dkCodecUtilsWin32.ppu
+/dkCodecUtilsWin32.rsj
+/dkEncodingUtils.o
+/dkEncodingUtils.ppu
+/dkEncodingUtils.rsj
+/MBEmuLoaderClasses.o
+/MBEmuLoaderClasses.ppu
+/MBEmuXMLConst.o
+/MBEmuXMLConst.ppu
+/NativeXml.o
+/NativeXml.ppu
+/NativeXml.rsj
+/NativeXmlWin32Compat.o
+/NativeXmlWin32Compat.ppu
+/sdDebug.o
+/sdDebug.ppu
+/sdStreams.o
+/sdStreams.ppu
+/sdStringTable.o
+/sdStringTable.ppu
 /formChennelRSWindowsAdd.lfm
 /formChennelRSWindowsAdd.o
 /formChennelRSWindowsAdd.ppu
